<resources>
    <string name="app_name">Funds</string>
    <string name="min_sip_amount">Min SIP Amount:</string>
    <string name="min_sip_multiple">Min SIP Multiple:</string>
    <string name="sip_dates">SIP Dates:</string>
    <string name="of_every_month">of every month</string>
    <string name="add_fund">Add Fund</string>
    <string name="enter_sip_amount">Enter SIP Amount</string>
    <string name="add">+Add</string>
    <string name="search">Search</string>
    <string name="fund_added_dashboard">Fund has been added to your dashboard</string>
    <string name="fund_added_successfully">Fund has been added to your dashboard has been successfully added to your dashboard</string>
    <string name="got_it">Got it</string>

</resources>
