<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="5dp">

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="#ffcdd2" />

    <RelativeLayout
        android:id="@+id/relative_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">


        <TextView
            android:id="@+id/tv_fund_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/gotham_rounded_bold_0"
            android:text="ICICI Prutential Blue Chip Equity Fund" />

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_fund_name"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_rounded_book_0"
                    android:text="@string/min_sip_amount" />

                <TextView
                    android:id="@+id/min_sip_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/gotham_rounded_bold_0"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_rounded_book_0"
                    android:text="@string/min_sip_multiple" />

                <TextView
                    android:id="@+id/min_sip_multiple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/gotham_rounded_bold_0" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/linear_layout_1"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/relative_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sip_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/gotham_rounded_book_0"
                android:text="@string/sip_dates" />

            <TextView
                android:id="@+id/sip_dates_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/sip_dates"
                android:fontFamily="@font/gotham_rounded_medium_0"/>

            <TextView
                android:id="@+id/tv_of_every_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/sip_dates_values"
                android:fontFamily="@font/gotham_rounded_book_0"
                android:text="@string/of_every_month" />

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:fontFamily="@font/gotham_rounded_bold_0"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:text="@string/add" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/enter_sip_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_layout_2"
            android:layout_margin="5dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/et_sip_amount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="#efefef"
                android:fontFamily="@font/gotham_rounded_book_0"
                android:padding="10dp"
                android:inputType="number"
                android:textSize="12sp"
                android:hint="@string/enter_sip_amount" />

            <Button
                android:id="@+id/add_fund_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/gotham_rounded_bold_0"
                android:text="@string/add_fund" />

        </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>
